<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonRock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/rock" />

        <Button
            android:id="@+id/buttonScissors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/scissors" />

        <Button
            android:id="@+id/buttonPaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/paper" />
    </LinearLayout>

    <TextView
        android:id="@+id/textUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textCpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpu"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/resultImageDescription"
        app:srcCompat="@android:color/background_light" />

</LinearLayout>